--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -683,6 +683,7 @@
 "search_for_notes" = "Поиск записок";
 "search_for_audios" = "Поиск музыки";
 "search_for_audios_playlists" = "Поиск плейлистов";
+"search_for_docs" = "Поиск документов";
 "search_button" = "Найти";
 "search_placeholder" = "Начните вводить любое имя, название или слово";
 "results_zero" = "Ни одного результата";
@@ -1240,6 +1241,7 @@
 "going_to_report_user" = "Вы собираетесь пожаловаться на данного пользователя.";
 "going_to_report_video" = "Вы собираетесь пожаловаться на данную видеозапись.";
 "going_to_report_audio" = "Вы собираетесь пожаловаться на данную аудиозапись.";
+"going_to_report_doc" = "Вы собираетесь пожаловаться на этот документ.";
 "going_to_report_post" = "Вы собираетесь пожаловаться на данную запись.";
 "going_to_report_comment" = "Вы собираетесь пожаловаться на данный комментарий.";
 
@@ -2009,6 +2011,7 @@
 "s_videos" = "Видео";
 "s_audios" = "Аудио";
 "s_audios_playlists" = "Плейлисты";
+"s_documents" = "Документы";
 
 "s_by_people" = "по пользователям";
 "s_by_groups" = "по группам";
@@ -2018,6 +2021,7 @@
 "s_by_apps" = "по приложениям";
 "s_by_audios" = "по аудиозаписям";
 "s_by_audios_playlists" = "по плейлистам";
+"s_by_documents" = "по документам";
 
 "s_order_by" = "Порядок";
 
@@ -2040,6 +2044,7 @@
 "s_date_after" = "После";
 
 "s_main" = "Основное";
+"s_type" = "Тип";
 
 "s_now_on_site" = "cейчас на сайте";
 "s_with_photo" = "с фото";
@@ -2204,3 +2209,74 @@
 "upd_in_general" = "Обновление фотографии страницы";
 "on_wall" = "На стене";
 "sign_short" = "Подпись";
+
+/* Documents */
+
+"my_documents" = "Документы";
+"my_documents_objectively" = "Мои Документы";
+"documents_of_group" = "Документы группы";
+"search_by_documents" = "Поиск по документам...";
+"documents" = "Документы";
+"document_uploading_in_general" = "Загрузка документа";
+"document_editing_in_general" = "Редактирование документа";
+"file" = "Файл";
+"tags" = "Теги";
+"owner_is_hidden" = "Автор скрыт";
+"accessbility" = "Доступность";
+"download_file" = "Скачать файл";
+"remove" = "Удалить";
+
+"document" = "Документ";
+"documents_all" = "Все документы";
+"document_type_0" = "Все";
+"document_type_1" = "Текстовые";
+"document_type_2" = "Архивы";
+"document_type_3" = "GIF";
+"document_type_4" = "Изображения";
+"document_type_5" = "Аудио";
+"document_type_6" = "Видео";
+"document_type_7" = "Книги";
+"document_type_8" = "Остальные";
+
+"documents_one" = "$1 документ";
+"documents_few" = "$1 документа";
+"documents_many" = "$1 документов";
+"documents_other" = "$1 документов";
+"documents_zero" = "$1 документов";
+
+"you_have_x_documents_one" = "У Вас $1 документ";
+"you_have_x_documents_few" = "У Вас $1 документа";
+"you_have_x_documents_many" = "У Вас $1 документов";
+"you_have_x_documents_other" = "У Вас $1 документов";
+"you_have_x_documents_zero" = "У Вас $1 документов";
+
+"group_has_x_documents_one" = "У этой группы $1 документ";
+"group_has_x_documents_few" = "У этой группы $1 документа";
+"group_has_x_documents_many" = "У этой группы $1 документов";
+"group_has_x_documents_other" = "У этой группы $1 документов";
+"group_has_x_documents_zero" = "У этой группы $1 документов";
+
+"x_documents_in_tab_one" = "В этой вкладке $1 документ";
+"x_documents_in_tab_few" = "В этой вкладке $1 документа";
+"x_documents_in_tab_many" = "В этой вкладке $1 документов";
+"x_documents_in_tab_other" = "В этой вкладке $1 документов";
+"x_documents_in_tab_zero" = "В этой вкладке $1 документов";
+
+"there_is_no_documents_alright" = "Здесь нет документов.";
+"limitations_file_limit_size" = "Файл не должен превышать $1 МБ";
+"limitations_file_allowed_formats" = "Разрешены следующие типы файлов";
+"limitations_file_author_rights" = "Файл не должен нарушать авторские права и правила сайта";
+"select_file_fp" = "Выбрать файл";
+"error_file_too_big" = "Файл слишком большой.";
+"error_file_invalid_format" = "Формат файла не разрешён.";
+"error_file_adding_copied" = "Не удалось добавить файл; он уже добавлен.";
+"error_file_preview" = "Не удалось загрузить файл: изображение имеет странности.";
+
+"private_document" = "Приватный (по ссылке)";
+"public_document" = "Публичный";
+"documents_sort_add" = "По дате добавления";
+"documents_sort_alphabet" = "A-Z/А-Я";
+"documents_sort_size" = "По размеру";
+"select_doc" = "Выбор документа";
+"no_documents" = "Документов нет";
+"go_to_my_documents" = "Перейти к своим документам";
