--- a/locales/uk.strings
+++ b/locales/uk.strings
@@ -568,7 +568,7 @@
 "notes_list_other" = "Знайдено $1 нотаток";
 
 /* Notes: Article Viewer */
-"aw_legacy_ui" = "Класичне дієвидло";
+"aw_legacy_ui" = "Класичний інтерфейс";
 
 "select_note" = "Вибір нотатки";
 "no_notes" = "Ви не маєте жодної нотатки";
