--- a/locales/list.yml
+++ b/locales/list.yml
@@ -89,6 +89,11 @@ list:
     name: "Indonesian"
     native_name: "Bahasa Indonesia"
     author: "loliconazter"
+  - code: "tat"
+    flag: "tat"
+    name: "Tatar"
+    native_name: "Татарча"
+    author: "koke228"
   - code: "qqx"
     flag: "europeanunion"
     name: "qqx"
