--- a/locales/tat.strings
+++ b/locales/tat.strings
@@ -655,7 +655,7 @@
 
 /* Settings */
 
-"main" = "Основное";
+"main" = "Төп";
 "contacts" = "Контакты";
 "avatar" = "Аватар";
 "privacy" = "Приватность";
